# haskell-xsystem

./: .gitignore  Aldtool.hs  README  README.md  README.textile  Setup.lhs  VSP2PPM.hs  ald-tool.cabal  extractALD.hs  readme.md  sys35tools.cabal
System35/: Vsp2ppm.hs~
System35/File/: Ald.hs  LittleEndian.hi  LittleEndian.hs  VSP.hs  Vsp.hs  Vsp.hs~
System35/File/Vsp/: Base.hi  Base.hs  Decode.hs  Decode.hs~  Encode.hs  Encode.hs~  Pixel.hi  Pixel.hs  Pixel.hs~
System35/Test/: Base.hs
src/: Display.hs  Vsp2ppm.hs
src/System35/File/: Vsp.hs
src/System35/File/Vsp/: Base.hs  Pixel.hs
test/: Main.hs  VspDecodeRealdata.hs  VspDecodeTest.hs  VspEncodeTest.hs
tests/: getword32.hs
