Name:          sys35tools
Version:       0.1
Homepage:      http://github.com/smly/sys35tools
Synopsis:      some tools for system35 written in haskell
Category:      Unclassified
License:       BSD3
License-file:  LICENSE
Author:        Kohei Ozaki
Maintainer:    Kohei Ozaki <i@smly.org>
Cabal-Version: >= 1.6
build-type:    Simple

library
  Exposed-Modules: System35.File.Ald
                   System35.File.VSP
                   System35.File.PMS8
                   System35.File.LittleEndian
  Build-Depends:   unix, base >= 3,
                   bytestring-mmap >= 0.2,
                   bytestring >= 0.9

executable aldtool
  Main-is:       Aldtool.hs
  Executable:    aldtool

executable vsp2ppm
  Main-is:       VSP2PPM.hs
  Executable:    vsp2ppm
