Name:          sys35tools
Version:       0.0.2
Homepage:      http://github.com/smly/sys35tools
Synopsis:      System35 in Haskell
Category:      Unclassified
License:       BSD3
License-file:  LICENSE
Author:        Kohei Ozaki
Maintainer:    Kohei Ozaki <eowner@gmail.com>
Cabal-Version: >= 1.6
build-type:    Custom
flag test
  description: Build test program.
  default:     False

executable test
  hs-source-dirs: src, test
  other-modules: System35.File.Ald,
                 System35.File.Vsp
  main-is:       VspDecodeTest.hs
  if flag(test)
    Build-Depends:
        HUnit >= 1.2.2, test-framework-hunit >= 0.2.4,
         test-framework >= 0.2.4
  if !flag(test)
    buildable:   False

library
  hs-source-dirs: src
  Exposed-Modules: System35.File.Ald,
                   System35.File.Vsp
--                   System35.File.PMS8
executable vsp2ppm
  other-modules:  System35.File.Vsp
  hs-source-dirs: src
  main-is:        Vsp2ppm.hs
  executable:     vsp2ppm

executable aldtool
  other-modules:  System35.File.Ald
  hs-source-dirs: src
  main-is:        Aldtool.hs
  executable:     ald_extract

executable sys35hs
  other-modules:  System35.File.Vsp
  hs-source-dirs: src
  main-is:        Display.hs
  executable:     sys35hs_display

  Build-Depends:   unix, base >= 3,
                   bytestring-mmap >= 0.2,
                   bytestring >= 0.9,
                   SDL >= 0.5.5
